--- a/Final Project.ipynb
+++ b/Final Project.ipynb
@@ -14,8 +14,246 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "genetic-category",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np \n",
+    "from matplotlib import pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "unexpected-plain",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>state</th>\n",
+       "      <th>positive</th>\n",
+       "      <th>negative</th>\n",
+       "      <th>pending</th>\n",
+       "      <th>hospitalized_currently</th>\n",
+       "      <th>hospitalized_cumulative</th>\n",
+       "      <th>in_icu_currently</th>\n",
+       "      <th>in_icu_cumulative</th>\n",
+       "      <th>on_ventilator_currently</th>\n",
+       "      <th>...</th>\n",
+       "      <th>fips</th>\n",
+       "      <th>death_increase</th>\n",
+       "      <th>hospitalized_increase</th>\n",
+       "      <th>negative_increase</th>\n",
+       "      <th>positive_increase</th>\n",
+       "      <th>total_test_results_increase</th>\n",
+       "      <th>fips_code</th>\n",
+       "      <th>iso_subdivision</th>\n",
+       "      <th>load_time</th>\n",
+       "      <th>iso_country</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2021-03-07</td>\n",
+       "      <td>AK</td>\n",
+       "      <td>56886.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>33.0</td>\n",
+       "      <td>1293.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>US-AK</td>\n",
+       "      <td>2022-01-11 00:04:58</td>\n",
+       "      <td>US</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2021-03-07</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>499819.0</td>\n",
+       "      <td>1931711.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>494.0</td>\n",
+       "      <td>45976.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2676.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2087</td>\n",
+       "      <td>408.0</td>\n",
+       "      <td>2347</td>\n",
+       "      <td>1</td>\n",
+       "      <td>US-AL</td>\n",
+       "      <td>2022-01-11 00:04:58</td>\n",
+       "      <td>US</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2021-03-07</td>\n",
+       "      <td>AR</td>\n",
+       "      <td>324818.0</td>\n",
+       "      <td>2480716.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>335.0</td>\n",
+       "      <td>14926.0</td>\n",
+       "      <td>141.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>65.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>5</td>\n",
+       "      <td>22</td>\n",
+       "      <td>11</td>\n",
+       "      <td>3267</td>\n",
+       "      <td>165.0</td>\n",
+       "      <td>3380</td>\n",
+       "      <td>5</td>\n",
+       "      <td>US-AR</td>\n",
+       "      <td>2022-01-11 00:04:58</td>\n",
+       "      <td>US</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2021-03-07</td>\n",
+       "      <td>AS</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2140.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>60</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>60</td>\n",
+       "      <td>US-AS</td>\n",
+       "      <td>2022-01-11 00:04:58</td>\n",
+       "      <td>US</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2021-03-07</td>\n",
+       "      <td>AZ</td>\n",
+       "      <td>826454.0</td>\n",
+       "      <td>3073010.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>963.0</td>\n",
+       "      <td>57907.0</td>\n",
+       "      <td>273.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>143.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>44</td>\n",
+       "      <td>13678</td>\n",
+       "      <td>1335.0</td>\n",
+       "      <td>45110</td>\n",
+       "      <td>4</td>\n",
+       "      <td>US-AZ</td>\n",
+       "      <td>2022-01-11 00:04:58</td>\n",
+       "      <td>US</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 31 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         date state  positive   negative  pending  hospitalized_currently  \\\n",
+       "0  2021-03-07    AK   56886.0        NaN      NaN                    33.0   \n",
+       "1  2021-03-07    AL  499819.0  1931711.0      NaN                   494.0   \n",
+       "2  2021-03-07    AR  324818.0  2480716.0      NaN                   335.0   \n",
+       "3  2021-03-07    AS       0.0     2140.0      NaN                     NaN   \n",
+       "4  2021-03-07    AZ  826454.0  3073010.0      NaN                   963.0   \n",
+       "\n",
+       "   hospitalized_cumulative  in_icu_currently  in_icu_cumulative  \\\n",
+       "0                   1293.0               NaN                NaN   \n",
+       "1                  45976.0               NaN             2676.0   \n",
+       "2                  14926.0             141.0                NaN   \n",
+       "3                      NaN               NaN                NaN   \n",
+       "4                  57907.0             273.0                NaN   \n",
+       "\n",
+       "   on_ventilator_currently  ...  fips  death_increase  hospitalized_increase  \\\n",
+       "0                      2.0  ...     2               0                      0   \n",
+       "1                      NaN  ...     1              -1                      0   \n",
+       "2                     65.0  ...     5              22                     11   \n",
+       "3                      NaN  ...    60               0                      0   \n",
+       "4                    143.0  ...     4               5                     44   \n",
+       "\n",
+       "  negative_increase positive_increase total_test_results_increase  fips_code  \\\n",
+       "0                 0               0.0                           0          2   \n",
+       "1              2087             408.0                        2347          1   \n",
+       "2              3267             165.0                        3380          5   \n",
+       "3                 0               0.0                           0         60   \n",
+       "4             13678            1335.0                       45110          4   \n",
+       "\n",
+       "   iso_subdivision            load_time  iso_country  \n",
+       "0            US-AK  2022-01-11 00:04:58           US  \n",
+       "1            US-AL  2022-01-11 00:04:58           US  \n",
+       "2            US-AR  2022-01-11 00:04:58           US  \n",
+       "3            US-AS  2022-01-11 00:04:58           US  \n",
+       "4            US-AZ  2022-01-11 00:04:58           US  \n",
+       "\n",
+       "[5 rows x 31 columns]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_csv('https://pandemicdatalake.blob.core.windows.net/public/curated/covid-19/covid_tracking/latest/covid_tracking.csv')\n",
+    "\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "intelligent-fisher",
    "metadata": {},
    "outputs": [],
    "source": []
